--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,40 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    overflow-x: hidden;
+    font-family: "Poppins";
+}
+.wrapper {
+    @apply container mx-auto px-5 lg:px-0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* canvas {
+    height: 420px !important;
+    width: 1000px !important;
+    color: black;
+} */
+
+.sidebar {
+    position: fixed;
+    left: 0;
+    top: 0;
+    height: 100%;
+    padding: 0px 22px;
+    background-color: #192336;
+}
+
+
+.chart{
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+}
+
+
+.purse-hr{
+    height:0.5px;
+    background-color: blue;
 }
